# tasty-grading-system

./: .gitignore  CHANGELOG.md  LICENSE.md  cabal.project  hie.yaml  shell.nix  tasty-grading-system.cabal
.github/workflows/: haskell.yml
src/Test/Tasty/: Grade.hs
test/: MyLibTest.hs
