cabal-version:      2.4
name:               tasty-grading-system
version:            0.1.0.0
author:             Fendor
maintainer:         power.walross@gmail.com
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Test.Tasty.Grade
  ghc-options:      -Wall
  build-depends:
    , aeson
    , base
    , containers
    , directory
    , filepath
    , generic-deriving
    , mtl
    , stm
    , tagged
    , tasty
    , text

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite tasty-grading-system-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          MyLibTest.hs
  ghc-options:      -Wall
  build-depends:
    , aeson
    , base
    , tasty
    , tasty-grading-system
    , tasty-hunit
